--- a/Задание.md
+++ b/Задание.md
@@ -2,8 +2,8 @@
 
 - [X]  Настроить пайплайн CI/CD для сборки и публикации Docker-образа приложения hello-kubernetes. Предпочтительно использовать Docker Registry встроенный в GitLab.
 
-- [ ]  Зарегистрировать бесплатный тестовый аккаунт в любом публичном облаке Kubernetes (Azure AKS/Google GKE/Mail.RU, список). Настроить пайплайн для публикации приложения в k8s, заменив при этом надпись "Hello world!" на "Hello SBIS!".
+- [X]  Зарегистрировать бесплатный тестовый аккаунт в любом публичном облаке Kubernetes (Azure AKS/Google GKE/Mail.RU, список). Настроить пайплайн для публикации приложения в k8s, заменив при этом надпись "Hello world!" на "Hello SBIS!".
 
-- [ ]  (опционально) Заменить цвета HTML страницы приложения hello-kubernetes на любые другие.
+- [X]  (опционально) Заменить цвета HTML страницы приложения hello-kubernetes на любые другие.
 
 - [ ]  (опционально) Опубликовать 2 реплики приложения, показать влияние настроек SessionAffinity.
