--- a/Задание.md
+++ b/Задание.md
@@ -6,4 +6,4 @@
 
 - [X]  (опционально) Заменить цвета HTML страницы приложения hello-kubernetes на любые другие.
 
-- [ ]  (опционально) Опубликовать 2 реплики приложения, показать влияние настроек SessionAffinity.
+- [X]  (опционально) Опубликовать 2 реплики приложения, показать влияние настроек SessionAffinity.
